<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_integrated</name>
  <version>1.0.0</version>
  <description>Doosan Robot Integrated System - Web Server + Sort Node</description>
  <maintainer email="taesla@todo.todo">taesla</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>dsr_msgs2</depend>
  <depend>dsr_bringup2</depend>
  <depend>arduino_conveyor_bridge</depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-flask-socketio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
